src/styles/_layout.scss
@use 'base' as b;

#home {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  padding: 2em 2em 1em 2em;
  position: relative;

  @include b.mdb-landscape() {
    display: grid;
    grid-template: repeat(2, 1fr) / 250px 1fr;
    grid-column-gap: 1.5em;
    justify-items: center;

    .profile-picture {
      grid-row: 1 / 3;
    }

    .socials-menu {
      align-self: start;
    }
  }

  .profile-picture > img {
    height: 250px;
    border-radius: 50%;
    border: 1px solid b.$black;
  }

  .profile-title {
    font-family: 'Abril Fatface', cursive;
    font-size: 1.25rem;
    border-top: 1px solid b.$black;
    border-bottom: 1px solid b.$black;
    margin-top: 1em;
    padding-left: 1em;
    padding-right: 1em;
  }

  .down-arrow {
    position: absolute;
    bottom: 3%;

    & > button {
      border: 0;
      background: none;
      padding: 1em 1em .5em 1em;
      cursor: pointer;
      @extend %anim-up-down;
    }
  }
}

#projects {
  padding: 1em;
  padding-top: 3em;
  background-color: b.$light-orange;

  .projects-gallery {
    list-style: none;
    padding-left: 0;
    margin-top: 2.5em;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
    grid-gap: 1em;

    .card {
      cursor: pointer;
    }
    
    .bracket {
      font-weight: 600;
      color: b.$orange;
      opacity: 0;
      transition: opacity .3s ease-out;
    }

    .card:hover .bracket, .card:active .bracket {
      opacity: 1;
    }
  }
}

